# todo-mini-app

./: .gitignore  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  services.py
db/: Dockerfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  store.js  utils.js
frontend/src/assets/: main.css
frontend/src/components/: Checkbox.vue  Home.vue  InitError.vue  Initialization.vue  Loading.vue  Todo.vue  TodoAddButton.vue  TodoFilter.vue  TodoInput.vue  TodoPanel.vue
